Tried to do a DenseNet Model

--- a/Bird Image Classification Models.ipynb
+++ b/Bird Image Classification Models.ipynb
@@ -34,6 +34,7 @@
     "\n",
     "We tested a variety of deep learning models, ensuring at least one per team member:\n",
     "- ResNet-101\n",
+    "- DenseNet-201\n",
     "\n",
     "Each model was trained on the same dataset split and with the same preprocessing pipeline for fair comparison."
    ]
